8350763: [lworld] InlineKlass::flat_array_klass hits assert(has_non_atomic_layout()) failed: Must be